--- a/package.json
+++ b/package.json
@@ -39,13 +39,15 @@
   "dependencies": {
     "archiver": "^2.1.0",
     "aws-sdk": "^2.145.0",
-    "axios": "^0.17.1",
+    "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "chalk": "^2.3.0",
+    "core-js": "^3.6.5",
     "ejs": "^2.5.7",
     "joi": "^10.6.0",
     "lodash": "^4.17.4",
     "random-seed": "^0.3.0",
+    "regenerator-runtime": "^0.13.5",
     "shell-escape": "^0.2.0",
     "tar": "^4.0.2",
     "uuid": "^3.1.0"
