--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mup-aws-beanstalk",
+  "name": "@hubroeducation/mup-aws-beanstalk",
   "version": "0.7.1",
   "description": "Deploy apps to AWS Elastic Beanstalk using Meteor Up",
   "main": "index.js",
