--- a/src/assets/nginx.yaml
+++ b/src/assets/nginx.yaml
@@ -8,10 +8,12 @@ files:
           proxy_buffers 4 256k;
           proxy_busy_buffers_size 256k;
 
+          <% if(incomingRequests) { %>
           upstream nodejs {
             server 127.0.0.1:8081;
             keepalive 256;
           }
+          <% } %>
 
           upstream healthcheck {
             server 127.0.0.1:8039;
@@ -37,6 +39,18 @@ files:
             }
             <% } %>
 
+            location /aws-health-check-3984729847289743128904723 {
+              proxy_pass http://healthcheck;
+              proxy_set_header Connection "";
+              proxy_http_version 1.1;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection "upgrade";
+            }
+
+            <% if(incomingRequests) { %>
             location ~* /packages/.+\.(eot|ttf|woff)$ {
               root /var/app/current/programs/web.browser;
               access_log off;
@@ -71,18 +85,12 @@ files:
               add_header Strict-Transport-Security "max-age=31536000; includeSubDomains;";
               <% } %>
             }
-
-            location /aws-health-check-3984729847289743128904723 {
-              proxy_pass http://healthcheck;
-              proxy_set_header Connection "";
-              proxy_http_version 1.1;
-              proxy_set_header Host $host;
-              proxy_set_header X-Real-IP $remote_addr;
-              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-              proxy_set_header Upgrade $http_upgrade;
-              proxy_set_header Connection "upgrade";
+            <% } else { %>
+            location / {
+              deny all;
             }
-    
+            <% } %>
+
             gzip on;
             gzip_comp_level 4;
             gzip_types text/html text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
