--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mup-aws-beanstalk",
-  "version": "0.8.0",
+  "version": "1.0.1",
   "description": "Deploy apps to AWS Elastic Beanstalk using Meteor Up",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "pretest": "npm run lint -s",
     "test": "mocha --require babel-register --require babel-polyfill ./tests/*.spec.js"
   },
-  "author": "zodern",
+  "author": "hubroedu",
   "license": "MIT",
   "keywords": [
     "meteor-up"
