--- a/src/assets/package.json
+++ b/src/assets/package.json
@@ -2,6 +2,6 @@
   "name": "<%= name %>",
   "version": "<%= version %>.0.0",
   "scripts": {
-    "start": "bash ./start.sh"
+    "start": "bash ./node.sh && bash ./start.sh"
   }
 }
